--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,38 +1,63 @@
-<h1>Delicious Hamburgers!</h1>
+<div class="container-fluid">
 
-<h2>Burgers that are not eaten!</h2>
+  <div class="row justify-content-center">
+    <div class="col-md-12 col-centered">
+      <h1>ScamBurger</h1>
+    </div>
+  </div>
+  <br>
+  <div class="row justify-content-center">
+    <div class="col-md-12 col-centered">
+      <img class="img-fluid" src="https://timedotcom.files.wordpress.com/2015/05/mcdonalds-hamburglar-close-up-shot-two.jpg" width="300px">
+    </div>
+    </div>
+  <br>
+  <br>
 
-<ul>
-  {{#each burgers}}
-    {{#unless burger_eaten}}
-      {{> burgers/burger-block eaten=false}}
-    {{/unless}}
-  {{/each}}
-</ul>
+  <div class="row justify-content-around">
 
-<h2>Burgers that are eaten!</h2>
+    <div class="col-md-4">
+      <h3>Burgers Not Eaten</h3>
+      <ul>
+        {{#each burgers}}
+        {{#unless burger_eaten}}
+        {{> burgers/burger-block beaten=1}}
+        {{/unless}}
+        {{/each}}
+      </ul>
+    </div>
 
-<ul>
-  {{#each burgers}}
-    {{#if burger_eaten}}
-      {{> burgers/burger-block eaten=true}}
-    {{/if}}
-  {{/each}}
-</ul>
+    <div class="col-md-4">
+      <h2>Add a Burger</h2>
+      <form class="create-form">
 
-<h2>Add a Burger</h2>
-<form class="create-form">
+        <div class="form-group">
+          <label for="burg">Burger Name:</label>
+          <input type="text" id="burg" name="name">
+        </div>
 
-  <div class="form-group">
-    <label for="burg">Burger Name:</label>
-    <input type="text" id="burg" name="name">
+        <div class="form-group">
+          <label for="is-eaten">Has it been eaten?</label><br>
+          <input type="radio" name="is-eaten" value="1" checked> Eaten!<br>
+          <input type="radio" name="is-eaten" value="0"> Not Eaten.
+        </div>
+
+        <button class="btn btn-dark btn-lg" type="submit">Add A Burger</button>
+      </form>
+    </div>
+
+    <div class="col-md-4" id="devoured">
+      <h3>Burgers Eaten</h3>
+      <ul>
+        {{#each burgers}}
+        {{#if burger_eaten}}
+        {{> burgers/burger-block beaten=0}}
+        {{/if}}
+        {{/each}}
+      </ul>
+    </div>
+
   </div>
 
-  <div class="form-group">
-    <label for="is-eaten">Has it been eaten?</label><br>
-    <input type="radio" name="is-eaten" value="1" checked> Eaten!<br>
-    <input type="radio" name="is-eaten" value="0"> Not Eaten.
-  </div>
 
-  <button type="submit">Add burger.</button>
-</form>
+</div>
